Im gonna cut off my own head if i cant fix this header.

--- a/css/main.css
+++ b/css/main.css
@@ -33,12 +33,8 @@ li {
   display: inline-block;
 }
 
-a:hover {
-  color: #fff;
-}
-
 span {
-  color: #ffffff;
+  color: #ffffff
 }
 
 ?
@@ -50,9 +46,6 @@ span {
 
 /**section 3**/
 
-main {
-  display: block;
-}
 
 @media only screen and (min-width: 38em) {
 
@@ -66,12 +59,6 @@ main {
 
 }
 
-img {
-  padding: 1rem;
-  margin: 0 auto;
-  max-width: 50em;
-  margin-bottom: 1.5rem;
-}
 
 body {
   margin: 0;
